--- a/app/src/main/res/layout/activity_desc7.xml
+++ b/app/src/main/res/layout/activity_desc7.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="0dp"
-        android:background="#125068"
+        android:background="#970e7c"
         android:baselineAligned="false"
         android:orientation="vertical"
         android:weightSum="1">
