--- a/app/src/main/res/layout/activity_online.xml
+++ b/app/src/main/res/layout/activity_online.xml
@@ -78,6 +78,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -85,7 +86,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#1a9393"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
@@ -139,6 +140,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -146,7 +148,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#970e7c"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
@@ -200,6 +202,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -207,7 +210,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#e92240"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
@@ -261,6 +264,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -322,6 +326,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -329,7 +334,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#1a9393"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
@@ -383,6 +388,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -390,7 +396,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#970e7c"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
@@ -444,6 +450,7 @@
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
@@ -451,7 +458,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#125068"
+            app:cardBackgroundColor="#e92240"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">>
