--- a/app/src/main/res/layout/activity_odesc6.xml
+++ b/app/src/main/res/layout/activity_odesc6.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:fillViewport="true"
     android:layout_height="match_parent"
-    tools:context="com.example.arpan.onlineevents.desc1">
+    tools:context="com.example.arpan.onlineevents.odesc6">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="0dp"
-        android:background="#125068"
+        android:background="#ca6a28"
         android:baselineAligned="false"
         android:orientation="vertical"
         android:weightSum="1">
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="230dp"
             android:layout_margin="10dp"
-            app:srcCompat="@drawable/me" />
+            app:srcCompat="@drawable/ff" />
 
         <TextView
             android:id="@+id/textView"
@@ -31,7 +31,7 @@
             android:layout_marginRight="30dp"
             android:paddingBottom="10dp"
             android:paddingTop="15dp"
-            android:text="Always dreamed of being your cricket idols like Tendulkar and Dhoni? We have just the right thing for you as we bring to you an online premier league event in which people create virtual teams for real-time cricket matches online. This touch of real life event not only makes people more enthusiastic in developing new things but also initiates open-source contribution in this project."
+            android:text=" Instead of talking about the Real Madrid and Barcelona feud, get ready to battle it out on the field and decide the best. We bring you a locally hosted Football Team Auction Event which is held offline with a player ranking algorithm based on the player performances."
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
@@ -55,7 +55,8 @@
             android:foregroundGravity="bottom"
             android:gravity="bottom"
             android:orientation="horizontal"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:paddingTop="10dp">
 
             <ImageView
                 android:id="@+id/imageView3"
