--- a/app/src/main/res/layout/activity_odesc2.xml
+++ b/app/src/main/res/layout/activity_odesc2.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="0dp"
-        android:background="#199492"
+        android:background="#ca6a28"
         android:baselineAligned="false"
         android:orientation="vertical"
         android:weightSum="1">
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="230dp"
             android:layout_margin="10dp"
-            app:srcCompat="@drawable/me" />
+            app:srcCompat="@drawable/bidwarsdb" />
 
         <TextView
             android:id="@+id/textView"
@@ -31,7 +31,7 @@
             android:layout_marginRight="30dp"
             android:paddingBottom="10dp"
             android:paddingTop="15dp"
-            android:text="this is a very long descriptionthis is a very long descriptionthis is a very long descriptionthis is a very long description"
+            android:text="Have you ever dreamt of owning an automobile company of your own and designing your own car and earning huge profits out of your venture? Well this event might just be the perfect attempt to test your abilities as an Autocrat. Ace the game of bidding to shield yourself and your car from your opponents with whatever remains in your pocket, without making a hole in it. Be wiser at this game of bidding and you can ride the car of your dreams."
             android:textColor="@android:color/white"
             android:textSize="18sp" />
 
